<resources>
    <string name="app_name">Five Factor Finder</string>
    <string name="personality_test_description">This personality test provides insights into your personality based on the <b>Big Five model.</b> </string>
    <string name="pleasenote_beforetest"><b>Please note:</b> This test is for educational purposes only and may not be perfectly accurate. It\'s important to consider your own experiences and self-awareness when interpreting the results.</string>
    <string name="testrequiresdata">The test requires region and age specific parameters in order to accurately find your personality</string>
    <string name="testcontains120qs">This test consists of 120 questions and will help you understand your personality based on the Big Five model. </string>
    <string name="answerhonestly">Answer each question honestly and thoughtfully. </string>
    <string name="norightorwronganswers">There are no right or wrong answers, so be truthful to get the most accurate results.</string>
    <string name="confidential">Your responses are completely confidential. </string>
    <string name="q1heading">Worry about things</string>
    <string name="q1subtext">How often do you find yourself feeling anxious or uneasy? Do you worry about the future, past mistakes, or everyday challenges?</string>
    <string name="extraversionheading">Extraversion</string>
    <string name="extraversioncontent">Extraversion is one of the Big Five personality traits that measures a person\'s level of sociability, assertiveness, and excitement-seeking. People who are high in Extraversion tend to be outgoing, talkative, and enjoy social interactions. They are often energetic, enthusiastic, and assertive.</string>
    <string name="agreeablenessheading">Agreeableness</string>
    <string name="agreeablenesscontent">Agreeableness reflects individual differences in concern with cooperation and social harmony. Agreeable individuals value getting along with others. They are considerate, friendly, generous, helpful, and willing to compromise. \n\nAgreeable people have an optimistic view of human nature, believing that people are essentially honest and trustworthy. On the other hand, disagreeable individuals prioritize self-interest, tend to be skeptical, unfriendly, and uncooperative. While agreeableness aids popularity and social harmony, it may not be useful in tough decision-making situations, making disagreeable people excel in roles like scientists or soldiers.</string>
    <string name="conscientiousnessheading">Conscientiousness</string>
    <string name="conscientiousnesscontent">Conscientiousness concerns how we control, regulate, and direct impulses. While impulsive behavior can be fun and spontaneous, it may lead to negative consequences. High conscientiousness is associated with careful planning, prudence, and persistence.\n\nConscientious individuals are often perceived as intelligent and reliable, while impulsive people may struggle with inconsistency and scattered accomplishments. Although conscientiousness can lead to success and stability, highly conscientious people may be seen as perfectionists or workaholics. On the other hand, impulsive individuals may enjoy short-lived pleasures, but are often criticized for their lack of ambition and discipline.</string>
    <string name="neuroticismheading">Neuroticism</string>
    <string name="neuroticismcontent">Neuroticism refers to the tendency to experience negative feelings like anxiety, anger, or depression. People high in neuroticism are emotionally reactive and tend to perceive ordinary situations as threatening, often responding more intensely than others.\n\nTheir negative reactions can persist for unusually long periods, leading to frequent bad moods. High neuroticism can impair decision-making and coping abilities. In contrast, people with low neuroticism are emotionally stable, calm, and less easily upset. While they experience fewer negative emotions, this does not necessarily mean they experience more positive feelings.</string>
    <string name="opennessheading">Openness to Experience</string>
    <string name="opennesscontent">Openness to Experience distinguishes imaginative, creative individuals from those who are more conventional and down-to-earth. Open people are intellectually curious, appreciative of art, and sensitive to beauty.\n\nThey tend to think in abstract and symbolic terms, leading to creative and unconventional thinking. Open individuals often have diverse interests and enjoy novelty and complexity. In contrast, people low in openness prefer familiar and straightforward experiences, often showing skepticism towards the arts and sciences. Both open and closed cognitive styles have advantages, depending on the situation, with openness being useful in intellectual roles and closed thinking excelling in more practical, structured environments.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>