<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/yourpersonalitytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/robotoregular"
            android:text="Your Personality"
            android:textAlignment="center"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/hoemebuttun"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/homeicon"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/extrovlotties"
            android:layout_width="308dp"
            android:layout_height="308dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourpersonalitytext"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/extrovertlottie"
            tools:layout_editor_absoluteY="233dp" />

        <LinearLayout
            android:id="@+id/fullextrovlayoutdiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/extrovlotties">

            <TextView
                android:id="@+id/extraversionheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extraversionheading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extraversiondescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extraversioncontent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/extraversionchartdiv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/fullextrovlayoutdiv">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/extraversionchart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/fullextrovlayoutdiv" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".92" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/agreelotties"
            android:layout_width="308dp"
            android:layout_height="308dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extraversionchartdiv"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/agreelottie" />

        <LinearLayout
            android:id="@+id/agreelayoutdiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agreelotties">

            <TextView
                android:id="@+id/agreeheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreeablenessheading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/agreeablenessdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreeablenesscontent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/agreeablenesschartdiv"
            app:layout_constraintTop_toBottomOf="@+id/agreelayoutdiv"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintDimensionRatio="1:1">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/agreeablenesschart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@id/agreelayoutdiv" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/conscientiousnesslotties"
            android:layout_width="308dp"
            android:layout_height="308dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agreeablenesschartdiv"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/conscientiousnesslottie"
            tools:layout_editor_absoluteY="233dp" />

        <LinearLayout
            android:id="@+id/conscientiousnesslayoutdiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conscientiousnesslotties">

            <TextView
                android:id="@+id/conscientiousnessheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conscientiousnessheading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/conscientiousnessdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conscientiousnesscontent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/conscientiousnesschartdiv"
            app:layout_constraintTop_toBottomOf="@id/conscientiousnesslayoutdiv"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintDimensionRatio="1:1">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/conscientiousnesschart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/conscientiousnesslayoutdiv" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/neuroticlotties"
            android:layout_width="308dp"
            android:layout_height="308dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conscientiousnesschartdiv"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/neuroticlottie"
            tools:layout_editor_absoluteY="233dp" />

        <LinearLayout
            android:id="@+id/neuroticlayoutdiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neuroticlotties">

            <TextView
                android:id="@+id/neuroticheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neuroticismheading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/neurotiocdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neuroticismcontent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/neuroticchartdiv"
            app:layout_constraintTop_toBottomOf="@id/neuroticlayoutdiv"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintDimensionRatio="1:1">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/neuroticchart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/neuroticlayoutdiv" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/opennesslotties"
            android:layout_width="308dp"
            android:layout_height="308dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neuroticchartdiv"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/opennesslottie"
            tools:layout_editor_absoluteY="233dp" />

        <LinearLayout
            android:id="@+id/opennesslayoutdiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/opennesslotties">

            <TextView
                android:id="@+id/opennessheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opennessheading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/opennessdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opennesscontent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/opennesschartdiv"
            app:layout_constraintTop_toBottomOf="@+id/opennesslayoutdiv"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintDimensionRatio="1:1">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/opennesschart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/opennesslayoutdiv" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>