<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/howtotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/robotoregular"
        android:text="How To..."
        android:textAlignment="center"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/prevbtnhowto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/arrow_back_50dp"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/testconsists120qs"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/testcontains120qs"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionicon"
        android:textColor="#938E98"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/questionicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howtotext" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/handshakeicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/trust"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testconsists120qs" />

    <TextView
        android:id="@+id/honesty"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/answerhonestly"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handshakeicon"
        android:textColor="#938E98"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rightorwrongicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/decisionmaking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/honesty" />

    <TextView
        android:id="@+id/rightorwrongtext"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/norightorwronganswers"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightorwrongicon"
        android:textColor="#938E98"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lockicon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/confidentiality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightorwrongtext" />

    <TextView
        android:id="@+id/confidentialtext"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/confidential"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lockicon"
        android:textColor="#938E98"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButtonhowto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="55dp"
        android:text="Next"
        app:icon="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>